--- a/SampleCreator/SampleCreator.csproj
+++ b/SampleCreator/SampleCreator.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net4.7</TargetFramework>
     <Platforms>AnyCPU;x64</Platforms>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -13,7 +14,7 @@
   <ItemGroup>
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.1.2-private-bimpress" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.1.0-dev-00817" />
-    <PackageReference Include="Xbim.Ifc" Version="5.9999.242-ifcRail" />
+    <PackageReference Include="Xbim.Ifc" Version="5.9999.243-ifcRail" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 
@@ -24,6 +25,7 @@
     </Reference>
     <Reference Include="RevitAPIIFC">
       <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2019\RevitAPIIFC.dll</HintPath>
+      <Private>false</Private>
     </Reference>
     <Reference Include="RevitAPIUI">
       <HintPath>..\..\..\..\..\..\Program Files\Autodesk\Revit 2019\RevitAPIUI.dll</HintPath>
